--- a/SpeechAndLeaflet/Help&About.html
+++ b/SpeechAndLeaflet/Help&About.html
@@ -133,12 +133,12 @@ function offHover()
 
 	  <div class="panel-group" id="accordion">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne_main">
 		<strong>What is this System?</strong>
     </a><i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseOne_main" class="panel-collapse collapse ">
       <div class="panel-body">
@@ -149,12 +149,12 @@ function offHover()
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo_main">
          <strong> System Data Flow Architecture</strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseTwo_main" class="panel-collapse collapse">
       <div class="panel-body">
@@ -172,32 +172,32 @@ function offHover()
 		 
 		  <div class="panel-group" id="accordion_howtouse">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseOne_howtouse">
 		<strong>Start the system</strong>
     </a><i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseOne_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
 	  
 		- Make sure that the Kinect device is plug-in and the Microphone is on
         </br>- Stand in front of the Kinect device 
-		</br>- raise-up your RIGHT hand until the right hand indicator at the wabpage header become green  
-		</br>- raise-up your LEFT hand until the left hand indicator at the wabpage header become green
+		</br>- Raise-up your RIGHT hand until the right hand indicator at the wabpage header become green  
+		</br>- Raise-up your LEFT hand until the left hand indicator at the wabpage header become green
 		</br>- The Speech recogniser is automatically working  
 		
        </div>
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseTwo_howtouse">
          <strong> Navigate the map  </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseTwo_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
@@ -219,21 +219,21 @@ function offHover()
   </div>
  
  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseThree_howtouse">
          <strong> Zoom In and Out  </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseThree_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
 	
-					<h4> Zoom In </h4 >
+					<h5> Zoom In </h5 >
 					</br>- Perform the Zoom In Gesture :     <Strong> OR </Strong> 
 					</br>- Say : <strong>"Zoom in" </strong> 
 					</br> <strong> Note: </strong> In both cases a message "Zoom In" will appear 
-					</br></br><h4> Zoom Out </h4>
+					</br></br><h5> Zoom Out </h5>
 					</br>- Perform the Zoom Out Gesture :     <Strong> OR </Strong> 
 					</br>- Say : <strong>"Zoom out" </strong> 
 					</br> <strong> Note: </strong> In both cases a message "Zoom out" will appear 			
@@ -241,12 +241,12 @@ function offHover()
     </div>
   </div>
  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseFour_howtouse">
          <strong> Mark a point (Marker) </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseFour_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
@@ -254,31 +254,30 @@ function offHover()
 					- Perform the "Clicking" gesture using your right or left hand:     <Strong> OR </Strong> 
 					</br>-  Say : <strong> "point" </strong> 
 					</br>-  In both cases a side bar will appear, Then
-					</br>      -Enter the point name by speech or using the keyboard 
-					</br>      -Perform the "Tab" gesture to move to description field
-					</br>      -Enter the point description by speech or by using the keyboard 
+					</br>      - Enter the point name by speech or using the keyboard 
+					</br>      - Perform the "Tab" gesture to move to description field,  <Strong> OR </Strong> Say the control name as : <strong>"Name" or "Description"</strong>, <Strong> OR </Strong> use the "Clicking" gesture 
+					</br>      - Enter the point description by speech or by using the keyboard 
 		
 
      </div>
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseFive_howtouse">
          <strong> Draw a Road  </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseFive_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
 	
 				   - To start  drawing a road ; say : <strong>"Road"</strong> 
 					</br> - Perform the "Clicking" gesture to assign points
-					</br> - !!!!!!!!!!!!!!!<strong>"!!!!!!!!!!!!!!!!!!"</strong> 
 					</br> - A side bar will appear to enter the road name, description and type 
 					</br> - You can use speech or keyboard to enter the road information. 
-					</br> - To move from one field to another use the "tab" gesture. 
+					</br> - To move from one field to another use the "Tab" gesture  <Strong> OR </Strong> Say the control name as : <strong>"Name" or "Description"</strong>, <Strong> OR </Strong> use the "Clicking" gesture 
 		
 	
 	  
@@ -287,19 +286,19 @@ function offHover()
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseSix_howtouse">
          <strong> Enable or Disable MiniMap  </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseSix_howtouse" class="panel-collapse collapse">
-      <div class="panel-body">
+      <div class="panel-body" >
 	 
-					<h4> Enable MiniMap </h4 >
+					<h5> Enable MiniMap </h5 >
 					</br>- Say : <strong>"Enable MiniMap" </strong> 
-					</br></br><h4> Disable MiinMap </h4 >
+					</br></br><h5> Disable MiinMap </h5 >
 					</br>- Say : <strong>"Disable MiniMap" </strong> 
 		
 	
@@ -308,12 +307,12 @@ function offHover()
     </div>
   </div>
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC" style="background:#FFFFCC">
+      <h5 class="panel-title" >
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseSeven_howtouse">
          <strong> Measurement   </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseSeven_howtouse" class="panel-collapse collapse">
       <div class="panel-body">
@@ -326,6 +325,26 @@ function offHover()
     </div>
   </div>
   
+  <div class="panel panel-default">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
+        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_howtouse" href="#collapseEight_howtouse">
+         <strong> Speech Commands for Specific Locations  </strong>
+  </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
+      </h5>
+    </div>
+    <div id="collapseEight_howtouse" class="panel-collapse collapse">
+      <div class="panel-body">
+	
+					<h5> User Location</h5>
+					</br>- To show your current location, Say : <strong>"where am I" </Strong> 
+					</br>- To disable showing your location, Say : <strong>"don't show where i am" </Strong>
+						</br></br><h5> Initial view "Muenster City in Germany"</h5 >
+					</br>- To show the initial location, Say : <strong>"go home" </Strong> 
+					</div>
+    </div>
+  </div>
+  
 </div>	  
 	
          
@@ -335,19 +354,19 @@ function offHover()
 		 	  <div class="tab-pane fade in " id="faqs">
 <div class="panel-group" id="accordion_faqs">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_faqs" href="#collapseOne_faqs">
 		<strong>What are the system requirements?</strong>
     </a><i class="indicator glyphicon glyphicon-chevron-down  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseOne_faqs" class="panel-collapse collapse">
       <div class="panel-body">
 
 	  <b><Strong>Required components for using the map: </strong> </b>
 			<ul>
-			<li>Kinect device. Need to install  <a href="http://www.openni.org/" target="_blank">OpenNI: Open-source SDK for 3D sensors</a> </li> 
+			<li>Kinect device. If you are using Microsoft Kinect then you need to install <a href=http://www.microsoft.com/en-us/kinectforwindowsdev/Downloads.aspx" target="_blank">Microsoft Kinect SDK</a>. If you are using xbox Kinect then no need for extra installation  </li> 
 			<li> Microphone </li>
 	  </div>
     </div>
@@ -355,12 +374,12 @@ function offHover()
  
   
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_faqs" href="#collapseTwo_faqs">
          <strong> How can I know that the system is tracking my hands gestures? </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseTwo_faqs" class="panel-collapse collapse">
       <div class="panel-body">
@@ -370,17 +389,16 @@ function offHover()
     </div>
   </div>
    <div class="panel panel-default">
-    <div class="panel-heading">
-      <h4 class="panel-title">
+    <div class="panel-heading" style="background:#FFFFCC">
+      <h5 class="panel-title">
         <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_faqs" href="#collapseThree_faqs">
          <strong> How can I know that the system is recognising my speech? </strong>
   </a><i class="indicator glyphicon glyphicon-chevron-up  pull-right"></i>
-      </h4>
+      </h5>
     </div>
     <div id="collapseThree_faqs" class="panel-collapse collapse">
       <div class="panel-body">
-	  There is a speech indicator at the page navigation header. By default, the system recognised the microphone and the speech indicator is green. <strong> If the indicator convert to red then <strong>.... </strong>
- </br>	   <img class="col-md-3 col-md-offset-3" src="./speechindicator.png" height="70" width="80">
+	You can click on the Speech button at the top right corner,  a side bar will appear. This side bar contains the words recognised by the system in addition to some speech commands.  
      </div>
     </div>
   </div>
