--- a/SpeechAndLeaflet/Help&About.html
+++ b/SpeechAndLeaflet/Help&About.html
@@ -158,7 +158,7 @@ function offHover()
     </div>
     <div id="collapseTwo_main" class="panel-collapse collapse">
       <div class="panel-body">
-        </br><img class="col-md-3 col-md-offset-3" src="./System_Architecture.png" ></br>
+        </br><img class="col-md-3 col-md-offset-3" src="./System_Architecture.png" height="400" width="280" ></br>
      </div>
     </div>
   </div>
